# AdaRAGUE

./: .gitignore  .gitmodules  LICENSE  README.md
Adaptive_Rag/: README.md  evaluate_final_acc.py  predict.py  run.py  run_retrieval_dev.sh  run_retrieval_test.sh  runner.py
Adaptive_Rag/base_configs/: ircot_qa_llama_8b_it_2wikimultihopqa.jsonnet  ircot_qa_llama_8b_it_hotpotqa.jsonnet  ircot_qa_llama_8b_it_musique.jsonnet  ircot_qa_llama_8b_it_nq.jsonnet  ircot_qa_llama_8b_it_squad.jsonnet  ircot_qa_llama_8b_it_trivia.jsonnet  ircot_qa_val_llama_8b_it_nq.jsonnet  nor_qa_llama_8b_it_2wikimultihopqa.jsonnet  nor_qa_llama_8b_it_hotpotqa.jsonnet  nor_qa_llama_8b_it_musique.jsonnet  nor_qa_llama_8b_it_squad.jsonnet  nor_qa_llama_8b_it_trivia.jsonnet  nor_qa_val_llama_8b_it_2wikimultihopqa.jsonnet  nor_qa_val_llama_8b_it_hotpotqa.jsonnet  nor_qa_val_llama_8b_it_musique.jsonnet  (+8 more)
SeaKR/: README.md  bootstrap_CI_upd.py  bootstrap_multihop.py  eval.py  eval_multihop.ipynb  eval_singlehop.ipynb  main_multihop.py  main_simpleqa.py
UC/: .gitignore  README.md  add_column.py  add_token_count.py  add_wiki_source.py  alignscore.py  analyze_uncertainty.py  bootrstrap_CI_upd.py  eval_if_context.py  eval_tqa.py  generate.py  lynx_eval.py  metrics.py  requirements.txt  rewrite_context.py  self_eval_run.py  self_rag.py  trained_uncertainty.py  uncertainty.py  utils.py
UC/notebooks/: main.csv  (+6 more)
dragin/: README.md
rowen/: README.md  google_serper.py  pyproject.toml  run.sh  run_standart.py  run_truthfulqa.py  utils.py
standard_retriever/: README.md  build_wiki_index.py  run_elastic.sh
(+393 files in other folders)
